<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="tab_photos">Fotoğraflar</string>
	<string name="tab_selected_photos">Seçili (%1$d)</string>
	<string name="photo_effects">Efektler</string>
	<string name="photo_caption">Caption</string>
	<string name="photo_rotate">Çevir</string>
	<string name="photo_crop">Crop</string>
	<string name="photo_reset">Reset</string>
	<string name="tag_no_name">Who\'s this?</string>
	<string name="tab_uploads">Yüklenenler</string>
	<string name="upload_title">Upload</string>
	<string name="upload_retry">Retry Failed</string>
	<string name="upload_quality_title">Quality</string>
	<string name="upload_quality_low">Low (640px)</string>
	<string name="upload_quality_medium">Medium (1024px)</string>
	<string name="upload_quality_high">High (2048px)</string>
	<string name="upload_target_title">Upload to</string>
	<string name="upload_target_album">ALBUM</string>
	<string name="upload_target_wall">WALL</string>
	<string name="upload_target_group">GROUP</string>
	<string name="upload_target_event">EVENT</string>
	<string name="upload_new_album_hint">New album name</string>
	<string name="upload_new_album_desc_hint">Description</string>
	<string name="upload_new_album">New Album</string>
	<string name="upload_privacy_title">Privacy</string>
	<string name="upload_account">Account</string>
	<string name="tag_friend_prompt">Tap to tag</string>
	<string name="place">Place</string>
	<string name="error_select_photos">Please select some photos to upload first</string>
	<string name="error_select_album">Please select an album first</string>
	<string name="error_not_connected">You\'re not connected to the Internet, try again later.</string>
	<string name="notification_uploading_photo">Uploading Phprivate void refreshSelectedPhotosTitle() {
		if (mSinglePane) {
			getSupportActionBar().getTabAt(1).setText(formatSelectedFragmentTitle());
		} else {
			SelectedPhotosFragment userPhotos = (SelectedPhotosFragment) getSupportFragmentManager().findFragmentById(
					R.id.frag_secondary);
			if (null != userPhotos) {
				userPhotos.setFragmentTitle(formatSelectedFragmentTitle());
			}
		}
	}

	private void refreshTabMenuItems() {
//		refreshUploadActionBarView();
//		refreshUploadsActionBarView();
		refreshSelectedPhotosTitle();
	}private void refreshSelectedPhotosTitle() {
		if (mSinglePane) {
			getSupportActionBar().getTabAt(1).setText(formatSelectedFragmentTitle());
		} else {
			SelectedPhotosFragment userPhotos = (SelectedPhotosFragment) getSupportFragmentManager().findFragmentById(
					R.id.frag_secondary);
			if (null != userPhotos) {
				userPhotos.setFragmentTitle(formatSelectedFragmentTitle());
			}
		}
	}

	private void refreshTabMenuItems() {
//		refreshUploadActionBarView();
//		refreshUploadsActionBarView();
		refreshSelectedPhotosTitle();
	}oto %1$s</string>
	<string name="notification_uploading_photo_progress">Uploading Photo %1$d %2$d%%</string>
	<string name="crash_toast">Application just crashed :( The developer has been notified of the cause.</string>
	<string name="untitled_photo">İsimsiz Fotoğraf</string>
	<string name="detecting_faces">Yüzler Tanımlanıyor</string>
	<string name="empty_selected_photos">Hiç bir fotoğraf seçmediniz.</string>
	<string name="welcome_message">Instabaskı\'ya hoşgeldiniz. Devam etmek için Facebook giriş düğmesine basınız.</string>
	<string name="login">Giriş</string>
	<string name="login_promo">Instabaskı\'dan arkadaşlarını haberdar et?</string>
	<string name="logout_static">Çıkış</string>
	<string name="logout">Logout %1$s</string>
	<string name="logout_prompt_title">Are you sure?</string>
	<string name="libraries">Libraries</string>
	<string name="settings">Settings</string>
	<string name="select_all">Hepsini Seç</string>
	<string name="clear_selection">Seçilileri Temizle</string>
	<string name="places_search_hint">Ara</string>
	<string name="pref_instant_upload_title">Instant Upload</string>
	<string name="pref_instant_upload_album_title">Album</string>
	<string name="pref_instant_upload_album_summary">Select the album to automatically upload to</string>
	<string name="pref_instant_upload_quality_title">Quality</string>
	<string name="pref_instant_upload_filter_title">Effect</string>
	<string name="pref_instant_upload_filter_summary">Select an effect to be applied automatically</string>
	<string name="pref_instant_upload_roaming_title">Roaming</string>
	<string name="pref_instant_upload_roaming_summary">Instant Upload if roaming?</string>
	<string name="pref_instant_upload_wifi_only_title">WiFi Only?</string>
	<string name="pref_instant_upload_wifi_only_summary">Only Instant Upload when connected to WiFi?</string>
	<string name="pref_general_screen">General Settings</string>
	<string name="pref_save_files_gallery_title">Save Images</string>
	<string name="pref_save_files_gallery_summary">Save Images to Gallery?</string>
	<string name="pref_more_options">Advanced Settings</string>
	<string name="dialog_instant_upload">photup now has Instant Upload! This means that whenever you take a photo, photup can automatically upload it to Facebook.\n\nJust enable it in Settings and we\'ll do the rest!</string>
	<string name="dialog_missing_pages_title">Missing Accounts?</string>
	<string name="dialog_missing_items_title">Missing Items?</string>
	<string name="dialog_missing_items_text">Is there anything missing from this list? If so then we need to request an extra permission from Facebook. Click the button below to continue.</string>
	<string name="privacy_public">Public</string>
	<string name="privacy_friends">Friends</string>
	<string name="privacy_me">Me</string>
	<string name="dialog_place_overwrite_title">Overwrite Place</string>
	<string name="dialog_place_overwrite_text">You have selected a place here, but also on some of the individual photos. Do you wish to overwrite all of your Place selections?</string>
	<string name="donate_title">Donate</string>
	<string name="promo_text">I\'m checking out photup for Facebook, a new Facebook photo sharer for Android. Give it a try!</string>
	<string name="album_all">Bütün Fotoğraflar</string>
	<string name="action_bar_upload_progress">%1$d of %2$d</string>
	<string name="opening_app">Opening&#8230;</string>
	<string name="stop_uploads">Stop Uploading</string>
	<string name="start_uploads">Start Uploading</string>
	<string name="stopped_uploads">Uploading is Disabled</string>
	<string name="started_uploads">Uploading is Enabled</string>
	<string name="empty_uploads">No uploads available</string>
	<string name="location_current">Current Location</string>
	<string name="location_photo">Photo Location</string>

	
	<string name="title_sectionPhotos">Fotoğraflar</string>
	<string name="title_sectionSelected">Seçilmiş Fotoğraflar</string>
	<string name="title_sectionSocial">Sosyal</string>
	
	
	<string name="menu_basket">Sepet</string>

</resources>