<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- <item -->
    <!-- android:id="@+id/menu_upload" -->
    <!-- android:showAsAction="ifRoom" -->
    <!-- android:title="@string/upload_title"> -->
    <!-- </item> -->

    <item
        android:id="@+id/menu_basket"
        android:showAsAction="always"
        android:title="@string/menu_basket">
    </item>
    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_dark"
        android:showAsAction="always"
        android:title="More">
        <menu xmlns:android="http://schemas.android.com/apk/res/android" >
            <item
                android:id="@+id/menu_select_all"
                android:icon="@drawable/ic_menu_select_all"
                android:showAsAction="ifRoom"
                android:title="@string/select_all"/>
            <item
                android:id="@+id/menu_clear_selection"
                android:icon="@drawable/ic_menu_clear_all"
                android:showAsAction="ifRoom"
                android:title="@string/clear_selection"/>
            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_menu_settings"
                android:showAsAction="ifRoom"
                android:title="@string/settings"/>
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_menu_logout"
                android:showAsAction="ifRoom"
                android:title="@string/logout_static"/>
        </menu>
    </item>

</menu>